test/tests/compiler/1_int_constants/valid/plx1_return_43.plx
int main(void) {
    return 45;
}
