test/tests/compiler/1_int_constants/invalid_lex/plx1_m4_identifier.plx
pub m4_main(none) i32 {
    return 0
}
